django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django
spec:
  selector:
    matchLabels:
      project: django
  template:
    metadata:
      labels:
        project: django
    spec:
      containers:
      - name: django-back
        image: django_app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    project: django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
